--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link rel="shortcut icon" href="/logo.png" type="image/x-icon"/>
     <meta property="og:site_name" content="Portfolio">
     <meta property="og:url" content="https://google.com/">
-    <meta property="og:title" content="SubItBy69">
-    <meta property="og:description" content="A Node.js, Front-end web developer.">
+    <meta property="og:title" content="Raysub">
+    <meta property="og:description" content="Just a random guy from the internet. A Front-end web developer and Discord bot developer.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/logo.png">
     
