--- a/RPS.html
+++ b/RPS.html
@@ -42,6 +42,229 @@
 
 <!--   <p id="action-message">Make your move.</p> -->
       
-    <script src="script.js" charset="utf-8"></script>
+  
   </body>
+
+   <style type="text/css">
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #0b0c0f;
+}
+
+header {
+  background-color: #21252e;
+  padding: 20px;
+}
+
+header > h1 {
+  color: #ffffff;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.score-board {
+  margin: 20px auto;
+  border: 3px solid white;
+  border-radius: 4px;
+  text-align: center;
+  width: 200px;
+  color: white;
+  font-size: 46px;
+  padding: 15px 20px;
+  font-family: Asap, sans-serif;
+ position: relative; 
+}
+
+.badge {
+  background: #E2584D;
+  color: white;
+  font-size: 14px;
+  padding: 2px 10px;
+  font-family: Asap, sans-serif
+}
+
+#user-label {
+  position: absolute;
+  top: 30px;
+  left: -25px;
+}
+
+#computer-label {
+  position: absolute;
+  top: 30px;
+  right: -30px;
+}
+
+.result {
+  font-size: 40px;
+  color: white;
+}
+
+.result > p {
+  text-align: center;
+  font-weight: bold;
+  font-family: Asap, sans-serif;
+}
+
+.choices {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.choice {
+  border: 4px solid white;
+  border-radius: 50%;
+  margin: 0px 15px;
+  padding: 15px;
+  display: inline-block;
+  transition: all 0.3s ease;
+}
+
+.choice:hover {
+  cursor: pointer;
+  background: #24272E;
+}
+
+#action-message {
+  text-align: center;
+  color: white;
+  font-family: Asap, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.img {
+  width: 67px;
+  height: 67px;
+}
+
+.green-glow {
+  border: 4px solid #00ff5d;
+  box-shadow: 0 0 10px #00b50c;
+}
+
+
+.red-glow {
+  border: 4px solid #fc121b;
+  box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow {
+  border: 4px solid #464647;
+  box-shadow: 0 0 10px #25292b;
+}
+
+   </style>
+
+
+   <script type="text/javascript"
+
+let i = 0;
+let names = ["Rock", "Paper", "Scissors", "Shoot!"];
+
+function change() {
+  document.querySelectorAll(".my-role").forEach(el => el.innerHTML = names[i]);
+  i++;
+  i %= names.length;
+}
+
+change();
+
+setInterval(change, 2 * 700);
+
+//RPS
+
+let userScore = 0;
+let computerScore = 0;
+const userScore_span = document.getElementById("user-score");
+const computerScore_span = document.getElementById("computer-score");
+const scoreBoard_div = document.querySelector(".score-board");
+const result_p = document.querySelector(".result > p");
+const paper_div = document.getElementById("p");
+const rock_div = document.getElementById("r");
+const scissor_div = document.getElementById("s");
+
+function getComputerChoice() {
+const choices = ['r', 'p', 's'];
+const randomNumber = Math.floor(Math.random()*3);
+return choices[randomNumber];
+}
+
+function convertToWord(letter) {
+  if (letter === "r") return "Rock";
+  if (letter === "p") return "Paper";
+  return "Scissor"
+}
+
+function win(userChoice, computerChoice) {
+  const smallUserWord = "user".fontsize(3).sup();
+  const smallCompWord = "comp".fontsize(3).sup();
+  const userChoice_div = document.getElementById(userChoice);
+  userScore++;
+  userScore_span.innerHTML = userScore;
+  computerScore_span.innerHTML = computerScore;
+  result_p.innerHTML = `${convertToWord(userChoice)}${smallUserWord} beats ${convertToWord(computerChoice)}${smallCompWord}. You win!`;
+  userChoice_div.classList.add('green-glow')
+  setTimeout(() => userChoice_div.classList.remove ('green-glow'),900);
+}
+
+
+function lose(userChoice, computerChoice) {
+  const smallUserWord = "user".fontsize(3).sup();
+  const smallCompWord = "comp".fontsize(3).sup();
+  const userChoice_div = document.getElementById(userChoice);
+  computerScore++;
+  userScore_span.innerHTML = userScore;
+  computerScore_span.innerHTML = computerScore;
+  result_p.innerHTML = `${convertToWord(userChoice)}${smallUserWord} loses to ${convertToWord(computerChoice)}${smallCompWord}. You lost!`;
+  userChoice_div.classList.add('red-glow')
+  setTimeout(() => userChoice_div.classList.remove ('red-glow'),900);
+}
+
+function draw(userChoice, computerChoice) {
+  const smallUserWord = "user".fontsize(3).sup();
+  const smallCompWord = "comp".fontsize(3).sup();
+  const userChoice_div = document.getElementById(userChoice);
+  result_p.innerHTML = `${convertToWord(userChoice)}${smallUserWord} draws with ${convertToWord(computerChoice)}${smallCompWord}. Its a draw!`;
+  userChoice_div.classList.add('gray-glow')
+  setTimeout(() => userChoice_div.classList.remove ('gray-glow'),900);
+}
+
+
+function game(userChoice) {
+  const computerChoice = getComputerChoice();  
+  switch (userChoice + computerChoice) {
+    case "rs":
+    case "pr":
+    case "sp":
+    win(userChoice, computerChoice);
+    break;
+    case "rp":
+    case "ps":
+    case "sr":
+    lose(userChoice, computerChoice);
+    break;
+    case "rr":
+    case "pp":
+    case "ss":
+    draw(userChoice, computerChoice);
+    break;
+  }
+}
+
+function main() {
+ rock_div.addEventListener('click', () => game("r")); 
+ paper_div.addEventListener('click', () => game("p"));
+ scissor_div.addEventListener('click', () => game("s")); 
+}
+main();
+
+></script>
 </html>
