--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
      
 		<link rel="shortcut icon" href="/logo.png" type="image/x-icon"/>
     <meta property="og:site_name" content="Portfolio">
-    <meta property="og:url" content="https://google.com/">
-    <meta property="og:title" content="Raysub">
+    <meta property="og:url" content="https://subxray.github.io">
+    <meta property="og:title" content="SubRay">
     <meta property="og:description" content="Just a random guy from the internet. A Front-end web developer and Discord bot developer.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/logo.png">
@@ -28,7 +28,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="/logo.png" alt="Epic Bread" />
+              <img src="/logo.png" alt="Logo"/>
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
@@ -49,7 +49,7 @@
 	  <div id="home">
 		 <div class="filter"></div>
 		 <section class="intro">
-       <h3>RaySub<hr></h3>
+       <h3>SubRay<hr></h3>
 		  <p>Welcome to my website!</p>
        <p>Here you can see few things <b>about me</b> and a list of <b>my projects.</b></p> 
 
@@ -125,8 +125,8 @@
 		 
 
 	</main>
-	  <footer class="copyright">© 2021 RaySub
-		  <!--<a href="#" target="_blank"> SubItBy69.</a> -->
+	  <footer class="copyright">© 2021 SubRay
+		  <!--<a href="#" target="_blank"> SubRay.</a> -->
      </footer>
 	  
   </div>
