--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<link rel="shortcut icon" href="/logo.png" type="image/x-icon"/>
     <meta property="og:site_name" content="Portfolio">
     <meta property="og:url" content="https://subxray.github.io">
-    <meta property="og:title" content="SubRay">
+    <meta property="og:title" content="Subray">
     <meta property="og:description" content="Just a random guy from the internet. A Front-end web developer and Discord bot developer.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/logo.png">
     
-      <title>Raysub</title>
+      <title>Subray</title>
     	 <meta name="theme-color" content="#ff9d00">
     
       <link href="style.css" rel="stylesheet" type="text/css" />
