--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		 <div class="filter"></div>
 		 <section class="intro">
        <h3>SubRay<hr></h3>
-		  <p>Welcome to my website!</p>
+		  <p>Welcomee to my website!</p>
        <p>Here you can see few things <b>about me</b> and a list of <b>my projects.</b></p> 
 
     <div class="connect-social">
