--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <!--			  <a href="#" target="_blank"><i class='fab fa-codepen'></i></a> -->
 
-			  <a href="https://twitter.com/Rayxsub?t=DtpOCxu1lbEnxRxknTDs2w" target="_blank"><i class='fab fa-twitter'></i></a>
+			  <a href="https://twitter.com/SubxRayy?t=IctgANl6DrxyZIjJS39bmQ" target="_blank"><i class='fab fa-twitter'></i></a>
 
 <!--			  <a href="#" target="_blank"><i class='fab fa-github'></i></a> -->
 
