--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:site_name" content="Portfolio">
     <meta property="og:url" content="https://subxray.github.io">
     <meta property="og:title" content="Subray">
-    <meta property="og:description" content="A web developer & designer and Discord bot developer. Just a random guy from the internet.">
+    <meta property="og:description" content="A web developer & designer and discord bot developer. Just a random guy from the internet.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/logo.png">
     
