--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p>Just a random guy from the internet</p>
       <p>I am a self-taught developer</p>
       <p>I like anime, music & programming</p>
-     <p><span class="my-role">A Web developer & designer</span></p>
+     <p><span class="my-role">A Web developer and designer</span></p>
       <p>I know Javascript, Python, HTML and CSS</p>
       <p>Currently a student.</p>
 
