--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="card">
         
 			    <img class="work-img" src="logo-1-calculator.png">
-			    <a href="https://Calculator.breadboi1234.repl.co" target="_blank"> <!--Link to project-->
+			    <a href="calculator.html" target="_blank"> <!--Link to project-->
 				<div class="work-content">Calculator</div></a>
             </div>
         
