--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      
 		<link rel="shortcut icon" href="/logo.png" type="image/x-icon"/>
     <meta property="og:site_name" content="Portfolio">
-    <meta property="og:url" content="https://google.com/">
+    <meta property="og:url" content="https://subxray.github.io/">
     <meta property="og:title" content="Subray">
     <meta property="og:description" content="A web developer & designer and discord bot developer. Just a random guy from the internet.">
     <meta property="og:type" content="website">
