--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        <p>Here you can see few things <b>about me</b> and a list of <b>my projects.</b></p> 
 
     <div class="connect-social">
-       <p>Feel free to contact me on my social media.</p>
+       <p>Feel free to contact me on my social media!</p>
 
 
 		<!-- Social media -->
