--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 
 			  <a href="https://open.spotify.com/user/trt7fd7wdepf6npqfo3uf3g04?si=X8XVaSucSbSBOpnAhti2CQ&utm_source=copy-link&nd=1&utm_medium=organic&product=open&%24full_url=https%3A%2F%2Fopen.spotify.com%2Fuser%2Ftrt7fd7wdepf6npqfo3uf3g04%3Fsi%3DX8XVaSucSbSBOpnAhti2CQ%26utm_source%3Dcopy-link&~channel=copy-link&feature=organic&_branch_match_id=1087009113079857109&_branch_referrer=H4sIAAAAAAAAA8WOWwrCMBREVxP%2FbLUpVoQivvorUhD%2FJKaJDcbkmtyLuHtTQVyCMDAwDzg9IsRFnkfwaPQrEwCZNe6WLyH4jiTWHpQbsaLUZO2Zgq374cL4ihVN0lBn37f09xRRVCEZBqx0Vz07BXrm4KE9J82vk5LxJhrGt6f56Shaku2lXe%2FBrXo0xebAihnh%2FRw9BanSSnp4jQekD4Sw9iLk7a8gqXBdCqYjVu1kL5xTtv5haiWQgqp9uApn5BvI0%2B5kYgEAAA%3D%3D" target="_blank"><i class='fab fa-spotify'></i></a> 
 
+			  <a href="https://www.instagram.com/subxray?theme=dark" target="_blank"><i class='fab fa-instagram'></i></a>
+
 
         </div>
 
