--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link rel="shortcut icon" href="/logo.png" type="image/x-icon"/>
     <meta property="og:site_name" content="Portfolio">
     <meta property="og:url" content="https://subxray.github.io/">
-    <meta property="og:title" content="Subray">
-    <meta property="og:description" content="A web developer & designer and discord bot developer. Just a random guy from the internet.">
+    <meta property="og:title" content="Ray">
+    <meta property="og:description" content="A web developer & designer and discord bot developer.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/logo.png">
     <meta name="theme-color" content="#00ccff">
@@ -49,7 +49,7 @@
 	  <div id="home">
 		 <div class="filter"></div>
 		 <section class="intro">
-       <h3>SubRay<hr></h3>
+       <h3>Ray<hr></h3>
 		  <p>Welcome to my website!</p>
        <p>Here you can see few things <b>about me</b> and a list of <b>my projects.</b></p> 
 
