--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 		 
 
 	</main>
-	  <footer class="copyright">© 2021 SubRay
-		  <!--<a href="#" target="_blank"> SubRay.</a> -->
+	  <footer class="copyright">© 2021 Ray
+		  <!--<a href="#" target="_blank"> Ray.</a> -->
      </footer>
 	  
   </div>
