--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="og:image" itemprop="image" content="/logo.png">
     <meta name="theme-color" content="#00ccff">
     
-      <title>Subray</title>
+      <title>Ray</title>
     	 
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
