--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta property="og:site_name" content="Portfolio">
     <meta property="og:url" content="https://subxray.github.io/">
     <meta property="og:title" content="Ray">
-    <meta property="og:description" content="A web developer & designer and discord bot developer.">
+    <meta property="og:description" content="A web developer & designer and a discord bot developer.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/logo.png">
     <meta name="theme-color" content="#00ccff">
     
-      <title>Ray</title>
+      <title>Raysist</title>
     	 
       <link href="style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
@@ -49,7 +49,7 @@
 	  <div id="home">
 		 <div class="filter"></div>
 		 <section class="intro">
-       <h3>Ray<hr></h3>
+       <h3>Raysist<hr></h3>
 		  <p>Welcome to my website!</p>
        <p>Here you can see few things <b>about me</b> and a list of <b>my projects.</b></p> 
 
@@ -83,12 +83,14 @@
 <!--───────About─────────-->
 	  <div id="about">
 		   <h3>About Me<hr></h3>
-
+      <p>opium*</p>
+      <p>I exist and I'm <b><a href="https://en.m.wikipedia.org/wiki/Opium_(record_label)" target="_blank">00pium</a></b></p>
+      <p>I exist and I'm 00pium*</p>
       <p>Just a random guy from the internet</p>
       <p>I am a self-taught developer</p>
       <p>I like anime, music & programming</p>
      <p><span class="my-role">A Web developer and designer</span></p>
-      <p>I know Javascript, Python, HTML and CSS</p>
+      <p>I know Javascript, Python, C, C++, HTML and CSS</p>
       <p>Currently a student.</p>
 
     </div>
@@ -125,7 +127,7 @@
 		 
 
 	</main>
-	  <footer class="copyright">© 2021 Ray
+	  <footer class="copyright">© 2020 Raysist/@subxray
 		  <!--<a href="#" target="_blank"> Ray.</a> -->
      </footer>
 	  
