--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" href="/logo.png" type="image/x-icon"/>
     <meta property="og:site_name" content="Portfolio">
     <meta property="og:url" content="https://subxray.github.io/">
-    <meta property="og:title" content="Ray">
+    <meta property="og:title" content="Raysist">
     <meta property="og:description" content="A web developer & designer and a discord bot developer.">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/logo.png">
@@ -83,9 +83,7 @@
 <!--───────About─────────-->
 	  <div id="about">
 		   <h3>About Me<hr></h3>
-      <p>opium*</p>
-      <p>I exist and I'm <b><a href="https://en.m.wikipedia.org/wiki/Opium_(record_label)" target="_blank">00pium</a></b></p>
-      <p>I exist and I'm 00pium*</p>
+      <p>I exist and I'm <b><a class="opium" href="https://en.m.wikipedia.org/wiki/Opium_(record_label)" target="_blank">00pium</a></b></p>
       <p>Just a random guy from the internet</p>
       <p>I am a self-taught developer</p>
       <p>I like anime, music & programming</p>
