--- a/calculator.html
+++ b/calculator.html
@@ -11,7 +11,7 @@
    </script>
    <body>
       <form name="calculator" id="calc">
-        <h1 class="h-1">Calculator</h1>
+        <h1 class="h-1">Veri Epik Calculator</h1>
          <table>
             <tr>
                <td colspan="4">
