--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         
             <div class="card">
 			    <img class="work-img" src="logo-3-wsolver.png">
-				<a href="ws_index.html" target="_blank">
+				<a href="/ws_index.html" target="_blank">
 				<div class="work-content">Wordle Solver</div></a>
             </div>
         
