--- a/rps_index.html
+++ b/rps_index.html
@@ -8,7 +8,7 @@
   
 	<title>RPS</title>
   
-	<link rel="stylesheet" href="ws_style.css">
+	<link rel="stylesheet" href="rps_style.css">
 
 </head>
 
@@ -42,6 +42,6 @@
 
 <!--   <p id="action-message">Make your move.</p> -->
       
-    <script src="ws_script.js" charset="utf-8"></script>
+    <script src="rps_script.js" charset="utf-8"></script>
   </body>
 </html>
