--- a/ws_index.html
+++ b/ws_index.html
@@ -16,7 +16,7 @@
   <title>Wordle Solver</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./ws_style.css">
 
 </head>
   
@@ -84,7 +84,7 @@
 </main>
   
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./ws_script.js"></script>
 
 </body>
 </html>
