--- a/ws_index.html
+++ b/ws_index.html
@@ -27,7 +27,7 @@
     
 		<h1>Wordle Solver</h1>
     <p>Idk what you're gonna accomplish by cheating in wordle but</p>
-		<p>Enter your <b><a class="a-w" style="color:#00ccff;text-decoration:underline;" target="_blank" href="https://www.nytimes.com/games/wordle/index.html/">Wordle</a></b> guess and mark the letters to find possible solutions.</p>
+		<p>Enter your <b><a class="a-w" style="color:#0095ff;text-decoration:underline;" target="_blank" href="https://www.nytimes.com/games/wordle/index.html/">Wordle</a></b> guess and mark the letters to find possible solutions.</p>
     
 	</article>
   
