--- a/rps_index.html
+++ b/rps_index.html
@@ -2,6 +2,14 @@
 <html>
 
 <head>
+
+	<meta property="og:site_name" content="RPS GAME">
+    <meta property="og:url" content="https://subxray.github.io/">
+    <meta property="og:title" content="Rock paper scissors">
+    <meta property="og:description" content="A rock paper scissors game for people with no friends. We provide an awesome bot to cure your loneliness :D">
+    <meta property="og:type" content="website">
+    <meta name="og:image" itemprop="image" content="/logo-2-rps.png">
+    <meta name="theme-color" content="#00ccff">
   
 	  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
