--- a/calculator.html
+++ b/calculator.html
@@ -1,7 +1,7 @@
 <html>
    <head>
 
-    <meta property="og:site_name" content="Epik Calculator">
+    <meta property="og:site_name" content="meth>math">
     <meta property="og:url" content="https://subxray.github.io/calculator.html">
     <meta property="og:title" content="Epik Calculator">
     <meta property="og:description" content="A veri epik working calculator by the raysist.">
