--- a/calculator.html
+++ b/calculator.html
@@ -6,8 +6,9 @@
     <meta property="og:title" content="Epik Calculator">
     <meta property="og:description" content="A veri epik working calculator by the raysist.">
     <meta property="og:type" content="website">
-    <meta name="og:image" itemprop="image" content="./logo-1-calculator.png">
-    <meta name="theme-color" content="#00ccff"> 
+    <meta name="theme-color" content="#00ccff">
+    <meta name="og:image" itemprop="image" content="/logo-1-calculator.png">
+    <link rel="shortcut icon" href="/logo-1-calculator.png" 
       
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <script type="text/javascript">
