--- a/rps_index.html
+++ b/rps_index.html
@@ -8,10 +8,11 @@
     <meta property="og:title" content="Rock paper scissors">
     <meta property="og:description" content="A rock paper scissors game for people with no friends. We provide an awesome bot to cure your loneliness :D">
     <meta property="og:type" content="website">
-    <meta name="og:image" itemprop="image" content="/logo-2-rps.png">
     <meta name="theme-color" content="#00ccff">
-  
-	  <meta charset="utf-8">
+    <meta name="og:image" itemprop="image" content="/logo-2-rps.png">
+    <link rel="shortcut icon" href="/logo-2-rps.png" 
+	 
+	    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
   
 	<title>RPS</title>
