--- a/ws_index.html
+++ b/ws_index.html
@@ -9,7 +9,7 @@
     <meta property="og:site_name" content="Wordle">
     <meta property="og:url" content="https://www.nytimes.com/games/wordle/index.html/">
     <meta property="og:title" content="Wordle Solver">
-    <meta property="og:description" content="Haxs for wordle. Just make your first guess, enter the keys and you'll get a list of possible outcomes.">
+    <meta property="og:description" content="Haxs for wordle. Just make your first guess, enter the keys and you'll get a list of possible outcomes">
     <meta property="og:type" content="website">
     <meta name="og:image" itemprop="image" content="/wslogo1.png">
     <meta name="theme-color" content="#00ccff">
