--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	  <div id="about">
 		   <h3>About Me<hr></h3>
       <p>I exist and I'm <b class="opium"><a style="color:#fff;text-decoration:none;" href="https://en.m.wikipedia.org/wiki/Opium_(record_label)" target="_blank">00pium</a></b></p>
-      <p>Just a random guy from the internet</p>
+      <p>Just a random guy from the internet known as raysist/@subxray</p>
       <p>I am a self-taught developer</p>
       <p>I like anime, music & programming</p>
      <p><span class="my-role">A Web developer and designer</span></p>
